<resources>
    <string name="app_name">DiCoding Story</string>
    <string name="empty_password">"Please enter a password of at least 8 characters"</string>
    <string name="empty_email">"Please enter a valid email address"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_subject_text">Please login to your account</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name">Name</string>
    <string name="empty_name">Please enter your name</string>
    <string name="please_wait">Please Wait…</string>
    <string name="fill_all_field">Please fill in all fields correctly</string>
    <string name="logout">Logout</string>
    <string name="dummy_name">Fauzan Gracia Ramadhani</string>
    <string name="lorem_ipsum">Lorem ipsum, or lipsum for short, is a standard text placed to demonstrate graphic or visual presentation elements such as fonts, typography, and layout.</string>
    <string name="refresh">Refresh</string>
    <string name="just_now">Just now</string>
    <string name="one_minute">1 Minute</string>
    <string name="minute">Minutes</string>
    <string name="one_hour">1 Hour</string>
    <string name="hours">Hours</string>
    <string name="yesterday">Yesterday</string>
    <string name="days">Days</string>
    <string name="setting">Setting</string>
    <string name="type_here">Write your description here</string>
    <string name="post">Post</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="permission_denied">Not getting permission</string>
    <string name="empty_post_info">Image or Description is Empty</string>
    <string name="wrong_email_or_password">The email or password you entered is incorrect</string>
    <string name="email_already_use">The email you entered is already in use or email format not supported</string>
    <string name="time_out">Unable to connect to the server, try again later</string>
    <string name="create_story">Create Story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enable_location">Enable Location</string>
    <string name="gps_is_required">You must have GPS enabled to use this feature!</string>
    <string name="todo">TODO</string>
</resources>