<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.authentication.login.LoginActivity">
    
    <TextView
        android:id="@+id/login_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subject_text"
        android:fontFamily="@font/quicksand_medium"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/login_email"
        app:layout_constraintTop_toBottomOf="@id/login_image"
        />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:src="@drawable/undraw_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <com.fgr.dicodingstory.custom_view.EditTextInfo
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/login_subject"/>

    <com.fgr.dicodingstory.custom_view.EditTextInfo
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginHorizontal="12dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/roundedbutton"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/login_password"/>

    <TextView
        android:id="@+id/login_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:fontFamily="@font/quicksand_medium"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>

    <TextView
        android:id="@+id/login_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@id/login_register_text"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>