<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.authentication.register.RegisterActivity">

    <TextView
        android:id="@+id/register_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:fontFamily="@font/quicksand_medium"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/register_email"
        app:layout_constraintTop_toBottomOf="@id/register_image"
        />

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:src="@drawable/undraw_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <com.fgr.dicodingstory.custom_view.EditTextInfo
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/register_subject"/>

    <com.fgr.dicodingstory.custom_view.EditTextInfo
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginHorizontal="12dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/register_name"/>

    <com.fgr.dicodingstory.custom_view.EditTextInfo
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginHorizontal="12dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/register_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/roundedbutton"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/register_password"/>

    <TextView
        android:id="@+id/register_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:fontFamily="@font/quicksand_medium"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/register_button"
        app:layout_constraintTop_toBottomOf="@id/register_button"/>

    <TextView
        android:id="@+id/register_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/quicksand_bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toEndOf="@id/register_register_text"
        app:layout_constraintTop_toBottomOf="@id/register_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>