<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView

        android:id="@+id/item_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardCornerRadius="8dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/bg2"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView

                android:id="@+id/story_list_card_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_name"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="22sp" />

            <TextView

                android:id="@+id/story_list_card_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/just_now"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand_semibold"
                android:textSize="12sp" />

            <TextView

                android:id="@+id/story_list_card_view_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/lorem_ipsum"
                android:fontFamily="@font/quicksand_medium"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="2"/>

            <ImageView
                android:id="@+id/story_list_card_view_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/my_girl_friend"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>