<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.detail_story.DetailStoryActivity">

        <ImageView
            android:id="@+id/ic_user"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_account"
            android:layout_margin="12dp"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/detail_story_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_name"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            android:fontFamily="@font/quicksand_bold"
            android:alpha="0"
            app:layout_constraintStart_toEndOf="@id/ic_user"
            app:layout_constraintTop_toTopOf="@id/ic_user"/>

        <TextView
            android:id="@+id/detail_story_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/just_now"
            android:layout_marginStart="6dp"
            android:textSize="12sp"
            android:fontFamily="@font/quicksand_medium"
            android:alpha="0"
            app:layout_constraintStart_toEndOf="@id/ic_user"
            app:layout_constraintBottom_toBottomOf="@id/ic_user"/>

        <TextView
            android:id="@+id/detail_story_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/ic_user"/>

        <ImageView
            android:id="@+id/detail_story_image"
            android:layout_width="wrap_content"
            android:layout_height="550dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/my_girl_friend"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="@id/detail_story_description"
            app:layout_constraintEnd_toEndOf="@id/detail_story_description"
            app:layout_constraintTop_toBottomOf="@id/detail_story_description"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detail_story_refresh"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:fontFamily="@font/quicksand_bold"
            android:layout_marginHorizontal="12dp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/roundedbutton"
            android:textColor="?attr/colorPrimary"
            android:drawableStart="@drawable/ic_refresh"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>